--- a/projects/S905/linux/linux.arm.conf
+++ b/projects/S905/linux/linux.arm.conf
@@ -8,7 +8,7 @@ CONFIG_64BIT=y
 CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
 CONFIG_MMU=y
 CONFIG_ARCH_MMAP_RND_BITS_MIN=18
-CONFIG_ARCH_MMAP_RND_BITS_MAX=18
+CONFIG_ARCH_MMAP_RND_BITS_MAX=24
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=11
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=16
 CONFIG_NO_IOPORT=y
@@ -864,9 +864,8 @@ CONFIG_I2C_AML=y
 # CONFIG_I2C_SLAVE_AML is not set
 # CONFIG_I2C_SW_AML is not set
 # CONFIG_BCM2079X_I2C is not set
-CONFIG_AML_PWM=y
-CONFIG_GX_PWM=y
-# CONFIG_MESON_PWM is not set
+CONFIG_AMLOGIC_PWM=y
+CONFIG_PWM_MESON=y
 
 #
 # HDMI TX Support
@@ -930,7 +929,9 @@ CONFIG_AML_DISPLAY=y
 CONFIG_AM_VOUT=y
 CONFIG_AM_TV_OUTPUT=y
 CONFIG_AML_VOUT_FRAMERATE_AUTOMATION=y
+# CONFIG_AML_VOUT_CC_BYPASS is not set
 # CONFIG_AML_VDAC_HW_SWITCH is not set
+CONFIG_AML_WSS=y
 
 #
 # Amlogic OSD Module
@@ -951,7 +952,12 @@ CONFIG_FB_OSD2_ENABLE=y
 # Amlogic OSD_EXT Module
 #
 # CONFIG_AM_FB_EXT is not set
+
+#
+# Amlogic GE2D Module
+#
 CONFIG_AM_GE2D=y
+# CONFIG_AM_GE2D_MORE_SECURITY is not set
 CONFIG_AM_LOGO=y
 
 #
@@ -987,8 +993,10 @@ CONFIG_GE2D_KEEP_FRAME=y
 #
 CONFIG_AM_VDEC_MPEG12=y
 CONFIG_AM_VDEC_MPEG4=y
+# CONFIG_AM_VDEC_MMPEG4 is not set
 CONFIG_AM_VDEC_VC1=y
 CONFIG_AM_VDEC_H264=y
+# CONFIG_AM_VDEC_MH264 is not set
 CONFIG_AM_VDEC_H264MVC=y
 CONFIG_AM_VDEC_H264_4K2K=y
 CONFIG_AM_VDEC_H265=y
@@ -1095,10 +1103,15 @@ CONFIG_BT_DEVICE=y
 # Amlogic TVIN Drivers
 #
 CONFIG_TVIN=y
-# CONFIG_TVIN_VDIN is not set
-# CONFIG_TVIN_AFE is not set
+CONFIG_TVIN_VDIN=y
+CONFIG_TVIN_AFE=y
+# CONFIG_ADC_DOUBLE_SAMPLING_FOR_SD is not set
+# CONFIG_ADC_DOUBLE_SAMPLING_FOR_CVBS is not set
+# CONFIG_TVIN_VBI is not set
 CONFIG_TVIN_HDMI=y
 # CONFIG_TVIN_HDMI_CEC is not set
+CONFIG_TVIN_HDMI_EXT=y
+CONFIG_TVIN_HDMI_EXT_SII9135=y
 # CONFIG_TVIN_BT656 is not set
 # CONFIG_VIUIN is not set
 # CONFIG_TVIN_ISP is not set
@@ -1141,7 +1154,7 @@ CONFIG_GXBB_SUSPEND=y
 # AMLOGIC CI Driver
 #
 # CONFIG_AM_PCMCIA is not set
-# CONFIG_AM_IOBUS is not set
+# CONFIG_AM_SPI is not set
 # CONFIG_AML_SMARTCARD is not set
 
 #
@@ -1191,6 +1204,11 @@ CONFIG_AML_AO_CEC=y
 # Amlogic Crypto Support
 #
 # CONFIG_CRYPTO_AML is not set
+
+#
+# ESM Support
+#
+CONFIG_AML_ESM=y
 
 #
 # Generic Driver Options
@@ -2757,6 +2775,7 @@ CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_LEDS_TRIGGER_ONESHOT=y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 # CONFIG_LEDS_TRIGGER_BACKLIGHT is not set
+# CONFIG_LEDS_TRIGGER_OFF is not set
 CONFIG_LEDS_TRIGGER_CPU=y
 CONFIG_LEDS_TRIGGER_GPIO=y
 CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
